hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_not_on_trait.php.exp
File "xhp_modifier_not_on_trait.php", line 4, characters 1-16:
Traits are not valid xhp classes. (Parsing[1002])
