hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_not_on_trait.php
<?hh // strict

// XHP keyword is not allowed for traits
xhp trait Foo {}
